[project]
name = "prepro"
version = "0.1.0"
dependencies = [
    "pyperclip",
]

[tool.setuptools]
py-modules = ["prepro", "preprob", "preprof"]

[project.scripts]
prepro = "prepro:main"
preprof = "preprof:main"
preprob = "preprob:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"